--- a/requirements.txt
+++ b/requirements.txt
@@ -199,50 +199,27 @@ spacy==3.7.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 SQLAlchemy==2.0.30
-srsly==2.5.1
-stack-data==0.6.2
-statsmodels==0.14.4
-sympy==1.13.1
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-intel==2.16.1
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-terminado==0.17.1
-tf_keras==2.19.0
-thinc==8.2.5
-thop==0.1.1.post2209072238
+srsly==2.5.0
+tensorboard==2.14.0
+tensorboard-data-server==0.7.0
+tensorflow==2.14.0
+tensorflow-datasets==4.8.3
+termcolor==2.3.0
+texttable==1.7.0
 threadpoolctl==3.2.0
-tifffile==2025.1.10
-tinycss2==1.2.1
-tk==0.1.0
-tkcalendar==1.6.1
-tkinterhtml==0.7
-tokenizers==0.21.0
-toml==0.10.2
-torch==2.6.0
-torchvision==0.21.0
-tornado==6.3.3
-tqdm==4.67.1
-traitlets==5.10.0
-transformers==4.48.3
-typer==0.9.4
-typing_extensions==4.12.2
+tqdm==4.66.0
+transformers==4.32.0
+typed-ast==1.5.5
+typing_extensions==4.7.1
 tzdata==2023.3
-ucimlrepo==0.0.7
-ultralytics @ git+https://github.com/THU-MIG/yolov10.git@6fbaf42b23f6709f4e34a51430587673e70e151d
-uri-template==1.3.0
-urllib3==2.0.5
-wasabi==1.1.3
+urllib3==1.26.14
+validators==0.20.0
+wasabi==1.1.2
 wcwidth==0.2.6
-weasel==0.3.4
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.6.3
-Werkzeug==2.3.7
-widgetsnbextension==4.0.9
-wordcloud==1.9.3
-wrapt==1.16.0
-WTForms==3.1.2
-xgboost==2.1.3
+WebOb==1.8.7
+Werkzeug==2.3.4
+wheel==0.40.0
+wrapt==1.14.1
+xgboost==1.8.3
+yellowbrick==1.5
+zipp==3.16.2
